# robot-rs

./: Cargo.toml
src/: lib.rs  main.rs
src/base/: types.rs
src/geometry/: macos.rs  mod.rs
src/mouse/: macos.rs  mod.rs
src/screen/: macos.rs
